--- a/tp2_Beziers/rendu/index.html
+++ b/tp2_Beziers/rendu/index.html
@@ -37,6 +37,8 @@
                 </div>
                 <div>
                     Dézoom <input type="text" class="caseDonnee" name="dezoom" value="5">
+                    &emsp;<label for="zoom">AutoZoom : </label>
+                    <input type="checkbox" id="zoom" name="zoom" >
                 </div>
             </div>
             <input id="submit" type="button" class="btn btn-primary" value="Dessiner">
