--- a/tp1_HelloWebGL/rendu/index.html
+++ b/tp1_HelloWebGL/rendu/index.html
@@ -10,6 +10,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
+<header id="head">
+    <p>Les 3 Monts <a class="lien" href="./">TP1</a> <a class="lien" href="../../tp2_Beziers/rendu/index.html">TP2</a> </p>
+</header>
 <div class="masthead">
     <form id="form">
         <div class="DivVal">
