--- a/tp2_Beziers/rendu/index.html
+++ b/tp2_Beziers/rendu/index.html
@@ -5,8 +5,8 @@
     <title>Test WebGl</title>
     <link rel="stylesheet" href="index.css">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -42,6 +42,8 @@
             &emsp;
             <button id="ajoutPoint" type="button" class="btn btn-primary">Ajouter</button>
 
+            <br><br>
+
             <!-- liste des points -->
             <label>
                 Point :
@@ -49,6 +51,8 @@
                     <option value="new" selected>new</option>
                 </select>
             </label>
+            &emsp;
+            <button id="suppressionPoint" type="button" class="btn btn-primary" disabled>Supprimer</button>
         </div>
 
 
@@ -65,7 +69,7 @@
 
 
         <div>
-                <button id="suppressionPoints" type="button" class="btn btn-primary">Supprimer tous les points</button>
+            <button id="suppressionPoints" type="button" class="btn btn-primary">Supprimer tous les points</button>
         </div>
     </form>
 </div>
