--- a/tp2_Beziers/rendu/index.html
+++ b/tp2_Beziers/rendu/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test WebGl</title>
+    <title>TP2 WebGl</title>
     <link rel="stylesheet" href="index.css">
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -46,7 +46,7 @@
 
             <!-- liste des points -->
             <label>
-                Point :
+                Liste de points :
                 <select id="point" name="pointFigure">
                     <option value="new" selected>new</option>
                 </select>
