Clean pour rendu

--- a/tp3_BSpline/rendu/index.html
+++ b/tp3_BSpline/rendu/index.html
@@ -57,12 +57,11 @@
 
 
         <div>
-            <label>Courbes de Béziers bonus :
+            <label>Courbes de tests :
                 <select id="bonus" name="bonus">
                     <option value="bonus" selected>Bonus</option>
-                    <option value="courbe1">Courbe de Bézier 1</option>
-                    <option value="courbe2">Courbe de Bézier 2</option>
-                    <option value="courbe3">Courbe de Bézier 3</option>
+                    <option value="courbe1">Courbe 1</option>
+                    <option value="courbe2">Courbe 2</option>
                 </select>
             </label>
         </div>
