--- a/tp4_Courbes3D/rendu/index.html
+++ b/tp4_Courbes3D/rendu/index.html
@@ -39,6 +39,10 @@
                 ; y =
                 <input type="text" class="caseDonnee" name="yPointAjout" value="">
             </label>
+            <label>
+                ; z =
+                <input type="text" class="caseDonnee" name="zPointAjout" value="">
+            </label>
             &emsp;
             <button id="ajoutPoint" type="button" class="btn btn-primary">Ajouter</button>
 
