--- a/tp3_BSpline/rendu/index.html
+++ b/tp3_BSpline/rendu/index.html
@@ -28,7 +28,6 @@
             </div>
         </div>
 
-
         <div>
             <!-- permet à l'utilisateur d'ajouter des points -->
             <label>
@@ -55,6 +54,12 @@
             <button id="suppressionPoint" type="button" class="btn btn-primary" disabled>Supprimer</button>
         </div>
 
+        <div>
+            <label>
+                Degré
+                <input type="text" class="caseDonnee" name="dezoom" value="2" id="degre">
+            </label>
+        </div>
 
         <div>
             <label>Courbes de tests :
