--- a/tp4_Courbes3D/rendu/index.html
+++ b/tp4_Courbes3D/rendu/index.html
@@ -7,9 +7,12 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js" crossorigin="anonymous"></script>
+
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+<!--    <script type="text/javascript" src="./libs/three.min.js"></script>-->
+<!--    <script type="text/javascript" src="./libs/OrbitControls.js"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/controls/OrbitControls.min.js"></script>-->
 
 </head>
 <body>
@@ -83,7 +86,7 @@
 
 <script src="main.js"></script>
 <script src="initListeners.js"></script>
-<script src="OrbitControls.js"></script>
+
 <script>
     // initialise le canva
     initCanva(form);
