--- a/tp4_Courbes3D/rendu/index.html
+++ b/tp4_Courbes3D/rendu/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+<!--    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>-->
 <!--    <script type="text/javascript" src="./libs/three.min.js"></script>-->
 <!--    <script type="text/javascript" src="./libs/OrbitControls.js"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>-->
-<!--    <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/controls/OrbitControls.min.js"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/examples/js/controls/OrbitControls.min.js"></script>
 
 </head>
 <body>
@@ -65,6 +65,12 @@
             <button id="suppressionPoint" type="button" class="btn btn-primary" disabled>Supprimer</button>
         </div>
 
+        <div>
+            <label>
+                Degré
+                <input type="text" class="caseDonnee" name="dezoom" value="2" id="degre">
+            </label>
+        </div>
 
         <div>
             <label>Courbes de Béziers bonus :
