Correction titre page tp4

--- a/tp4_Courbes3D/rendu/index.html
+++ b/tp4_Courbes3D/rendu/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TP4 WebGl</title>
+    <title>TP4 Courbes 3D</title>
     <link rel="stylesheet" href="index.css">
 
     <!--  import de three js et de orbit control  -->
