--- a/tp3_BSpline/rendu/erreurNoeud.html
+++ b/tp3_BSpline/rendu/erreurNoeud.html
@@ -5,7 +5,7 @@
     <title>Page erreur</title>
 </head>
 <body>
-    <p id="txtErreur">erreurPoint.html</p>
+    <p id="txtErreur">La taille du vecteur de noeud rentré est incorrect</p>
     <script src="main.js"></script>
 </body>
 </html>
