Correction de bugs et mise à jour manuels

--- a/tp3_BSpline/rendu/index.html
+++ b/tp3_BSpline/rendu/index.html
@@ -38,6 +38,9 @@
                 ; y =
                 <input type="text" class="caseDonnee" name="yPointAjout" value="">
             </label>
+
+            <button id="ajoutPoint" type="button" class="btn btn-primary" style="margin-left: 1vw">Ajouter</button>
+
             <br><br>
             <!-- liste des points -->
             <label>
@@ -48,22 +51,19 @@
             </label>
             &emsp;
             <button id="suppressionPoint" type="button" class="btn btn-primary" disabled>Supprimer</button>
-        </div>
-
-        <div>
-            <button id="ajoutPoint" type="button" class="btn btn-primary">Ajouter</button>
+            <br><br>
             <button id="suppressionPoints" type="button" class="btn btn-primary">Supprimer tous les points</button>
         </div>
 
         <div>
             <label>
-                Degré
+                Degré :
                 <input type="text" class="caseDonnee" name="degre" value="2" id="degre">
             <br>
-                Vecteur nœud
+                Vecteur nœud :
                 <input type="text" class="caseDonnee" name="noeud" value="" id="noeud">
             <br>
-                Poids
+                Poids :
                 <input type="text" class="caseDonnee" name="poids" value="" id="poids">
             </label>
         </div>
