Ajout bouton dessiner + modif manuel

--- a/tp3_BSpline/rendu/index.html
+++ b/tp3_BSpline/rendu/index.html
@@ -77,6 +77,10 @@
                 </select>
             </label>
         </div>
+
+        <div>
+            <button id="dessiner" type="button" class="btn btn-primary">Dessiner</button>
+        </div>
     </form>
 </div>
 
